# WrapText

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
wraptext/: wraptext.py
wraptext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
