[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wraptext"
version = "1.0.0"
description = "A sample Python project"  # Optional
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["wrap", "quebra-de-linha", "quebra"] 
authors = [
  {name = "Cleber Almeida Pereira", email = "cleber.ap.ads@gmail.com" }
]
maintainers = [
  {name = "Cleber Almeida Pereira", email = "cleber.ap.ads@gmail.com" }
]
classifiers = [  
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Portuguese (Brazilian)",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]  # Optional
"Código fonte" = "https://github.com/CleberPereiraAnalista/WrapText.git"
